# apify

./: .dockerignore  404.html  Cargo.toml  DOCKER.md  Dockerfile  README.md  README.zh-CN.md  apify.sqlite  collect.sh  docker-compose.yml  index.html  mkdocs.yml  quickstart.sh  sitemap.xml  test_relations_advanced.sh  test_relations_manual.sh
.changelog/: openapi-security-schemes.md
.github/workflows/: ci.yaml  ci.yml  docker.yml  gh-pages.yml  oauth-e2e.yml  plugins.yaml
admin/: BUILD.md  README.md  index.html  package-lock.json  package.json  vite.config.docker.ts  vite.config.ts
admin/src/: App.tsx  index.css  main.tsx
api/control-plane/: index.html
apify/: Cargo.toml  README.md  apify.sqlite  init_db.sql  init_db_sqlite.sql  test_api.sh
apify/config/: config-with-observability.yaml  config.yaml  config_components.yaml  crud-config.yaml  database.yaml  example_with_modules.yaml
apify/config/openapi/: books.yaml  components_only.yaml  orders.yaml  users.yaml
apify/src/: api_generator.rs  app_state.rs  config.rs  crud_handler.rs  database.rs  handler.rs  lib.rs  main.rs  modules.rs  phases.rs  schema_generator.rs  server.rs
apify/src/modules/: body_validator.rs  key_auth.rs  mod.rs  postgres.rs  request_logger.rs  response_headers.rs  sqlite.rs
apify/src/observability/: mod.rs
apify/tests/: integration_crud_users.rs  integration_modules.rs  integration_non_auth.rs  integration_server.rs
asd/: Cargo.toml
asd/src/: lib.rs  script.rs
concepts/architecture/: index.html
concepts/control-plane/: index.html
concepts/data-plane/: index.html
concepts/request-lifecycle/: index.html
config/: README.md  config.yaml
config/openapi/: components_only.yaml  items.yaml  items_oauth.yaml
configuration/api-definition/: index.html
configuration/main-config/: index.html
docs/: AUDIT_TRAIL.md  RELATIONS.md  index.md
docs/api/: control-plane.md
docs/concepts/: architecture.md  control-plane.md  data-plane.md  request-lifecycle.md
docs/configuration/: api-definition.md  main-config.md
docs/features/: audit-trail.md  authentication.md  relations.md  zero-code-crud.md
docs/getting-started/: docker.md  installation.md  quickstart.md
e2e/: Makefile  OBSERVABILITY_E2E_SUMMARY.md  OBSERVABILITY_TESTS.md  README.md  apis_crud_test.go  auth_crud_test.go  config-postgres.yaml  config-sqlite.yaml  control_plane_test.go  cp_auth_test.go  crud_test.go  data_manager_test.go  datasources_crud_test.go  e2e-api.yaml  e2e_suite_test.go  go.mod  go.sum  helpers_test.go  listeners_crud_test.go  listeners_test.go  migration_test.go  multi_listener_test.go  oauth_test.go  observability_test.go  prepare-config.sh  relations_test.go  run_cp_test.sh  run_with_cp.sh  security_scheme_test.go  test.sh  test_helpers.go  test_output.txt  validation_test.go
e2e-tests/: .gitignore  Makefile  OBSERVABILITY_E2E_SUMMARY.md  OBSERVABILITY_TESTS.md  README.md  crud_test.go  go.mod  go.sum  observability_test.go  test-observability.sh
examples/basic/: README.md  docker-compose.yml
examples/full/: README.md  docker-compose.yml  prometheus.yml
examples/oauth/: README.md  docker-compose.yml
examples/observability/: README.md  docker-compose.yml  prometheus.yml
examples/relations/: README.md  docker-compose.yml  test_relations.sh  test_relations_advanced.sh  test_relations_crud.sh
features/audit-trail/: index.html
features/authentication/: index.html
features/relations/: index.html
features/zero-code-crud/: index.html
flow/: Cargo.toml  all_rust_with_path.txt  collect.sh
flow/src/: collector.rs  condition.rs  context.rs  error.rs  expression.rs  flow.rs  lib.rs  pipeline.rs  script.rs  step.rs  step_worker.rs  transform.rs  utils.rs
flow/tests/: integration_test.rs
getting-started/docker/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
observability/: QUICKSTART.zh-CN.md  README.md  prometheus.yml
phs/: Cargo.toml
phs/src/: functions.rs  lib.rs  preprocessor.rs  script.rs  variable.rs
plugins/amqp/: Cargo.toml  README.md  apify.yaml
plugins/amqp/src/: consumer.rs  lib.rs  produce.rs  setup.rs
plugins/cache/: Cargo.toml  apify.yaml
plugins/cache/src/: config.rs  input.rs  lib.rs
plugins/cli/: Cargo.toml  README.md  apify.yaml
plugins/cli/src/: args.rs  (+2 more)
plugins/echo/: Cargo.toml  README.md  apify.yaml
plugins/http_request/: Cargo.toml  README.md  apify.yaml
plugins/http_server/: Cargo.toml  README.md  apify.yaml
plugins/jwt/: Cargo.toml  README.md  apify.yaml  example.phlow  module.dylib
plugins/log/: Cargo.toml  README.md  apify.yaml  module.dylib
plugins/postgres/: Cargo.toml  README.md  apify.yaml
plugins/rpc/: Cargo.toml  README.md  apify.yaml
plugins/sleep/: Cargo.toml  README.md  apify.yaml  module.dylib
quickstart/: README.md  docker-compose.yml
runtime/: Cargo.toml
runtime/src/: main.rs  memory.rs  package.rs  plugin.rs  preprocessor.rs  runtime.rs  scripts.rs  test_runner.rs
runtime/src/loader/: error.rs  loader.rs  mod.rs
runtime/src/settings/: cli.rs  envs.rs  mod.rs
scripts/: local-docker-test.sh  run-e2e-tests.sh
sdk/: Cargo.toml
sdk/src/: context.rs  count.rs  macros.rs  otel.rs  prelude.rs  timer.rs
search/: search_index.json
shell/: build-plugins.sh  restructure-plugins.sh
src/: api_generator.rs  app_state.rs  config.rs  control_plane.rs  crud_handler.rs  database.rs  handler.rs  lib.rs  main.rs  phases.rs  schema_generator.rs  server.rs  startup.rs
src/control_plane/: apis.rs  auth.rs  data_manager.rs  datasources.rs  import.rs  listeners.rs  mod.rs  models.rs  schemas.rs  server.rs
src/modules/: key_auth.rs  mod.rs  oauth.rs  openapi_docs.rs  postgres.rs  request_logger.rs  request_validator.rs  sqlite.rs  tracing.rs
src/observability/: metrics.rs  tracing.rs
tests/: auth.yaml  inner.yaml  integration_access_log.rs  integration_crud_users.rs  integration_listeners.rs  integration_modules.rs  integration_non_auth.rs  integration_server.rs  jwt.yaml  unit_migration.rs
tests-yaml/: complex-test.yaml  condition.yaml  log.yaml  string.yaml
(+78 files in other folders)
