[workspace]
members = [
    "flow",
    "runtime",
    "sdk",
    "phs",
    "plugins/http_server",
    "plugins/echo",
    "plugins/amqp",
    "plugins/log",
    "plugins/sleep",
    "plugins/http_request",
    "plugins/postgres",
    "plugins/cli",
    "plugins/rpc",
    "plugins/jwt",
    "plugins/cache",

]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache License 2.0"
repository = "https://github.com/apifyhost/apify"

[workspace.dependencies]
flow = { path = "flow", version = "0" }
sdk = { path = "sdk", version = "0" }

anyhow = { version = "1.0" }
clap = { version = "4.4", features = ["derive"] }
crossbeam = { version = "0.8" }
evalexpr = { version = "12.0" }
flate2 = { version = "1.0" }
futures = { version = "0.3" }
git2 = { version = "0.20" }
libc = { version = "0.2" }
libloading = { version = "0.8" }
once_cell = { version = "1" }
regex = { version = "1.11.1" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["full", "tracing"] }
tar = { version = "0.4" }
valu3 = { version = "0.8" }
zip = { version = "5" }

env_logger = { version = "0" }
log = { version = "0.4" }
opentelemetry = { version="0.31" }
opentelemetry_sdk = { version = "0" }
opentelemetry-semantic-conventions = { version = "0", features = [
    "semconv_experimental",
] }
opentelemetry-stdout = { version="0" }
opentelemetry-otlp = { version = "0", features = ["grpc-tonic"] }
tracing = { version = "0" }
tracing-core = { version="0" }
tracing-log = { version = "0" }
tracing-opentelemetry = { version = "0" }
tracing-subscriber = { version = "0" }

# to be removed
rhai = { version = "1.22.2", features = ["serde", "sync"] }
asd = { path = "asd", version = "0" }
chrono = { version = "0.4.41", features = ["serde"] }
