[package]
name = "apify"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/apifyhost/apify"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1", features = ["full", "tracing"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["full"] }
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
serde_json = { version = "1.0" }
clap = { version = "4", features = ["derive"] }
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# SQLx for DB-agnostic (SQLite + Postgres)
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "any",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Observability: Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Observability: OpenTelemetry for distributed tracing
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

# Observability: Prometheus metrics
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
assert_cmd = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
serial_test = "3"
