[package]
name = "apify"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { workspace = true }
tokio = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
socket2 = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
deadpool-postgres = "0.12.0"
deadpool = "0.10.0"
tokio-postgres = "0.7.8"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
