[package]
name = "apify"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { workspace = true }
tokio = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
socket2 = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# SQLx for DB-agnostic (SQLite + Postgres)
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "any",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Observability: Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Observability: OpenTelemetry for distributed tracing
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

# Observability: Prometheus metrics
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
assert_cmd = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
serial_test = "3"
