[package]
name = "flow"
version = "0.1.0"
edition = "2021"
description = "A lightweight dynamic rule-based workflow engine"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
evalexpr = "12.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
anyhow = "1.0"

[dev-dependencies]
env_logger = "0.11"
