[package]
name = "flow"
version = "0.1.0"
edition = "2024"

[dependencies]
sdk = { workspace = true }

serde = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

valu3 = { workspace = true }
tokio = { workspace = true }

# to be removed
rhai = { workspace = true }
asd = { workspace = true }
