[package]
name = "amqp"
version = "0.0.2"
edition = "2024"

[dependencies]
sdk = { workspace = true }
lapin = "3"
futures-lite = "2.6.0"
openssl = { version = "0.10.72", features = ["vendored"] }
hostname = "0.4.1"
reqwest = { version = "0.12.20", features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0"
urlencoding = "2.1"
url = "2.5.4"

[lib]
crate-type = ["cdylib"]
name = "amqp"
