[package]
name = "cache"
version = "0.1.0"
edition = "2024"
authors = ["Philippe Assis <codephilippe@gmail.com>"]
description = "APIFY cache module using QuickLeaf for high-performance in-memory caching"
license = "MIT"

[dependencies]
# Core APIFY SDK
sdk = { workspace = true }

# Cache implementation
quickleaf = "0"

# Additional dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"

[lib]
name = "cache"
crate-type = ["cdylib"]
